--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "eslint-plugin-react": "^7.24.0"
   },
   "private": true
 }
